[package]
name = "cathulhu"
version = "0.1.4"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
description = "An GitHub cli written in Rust"
repository = "https://github.com/booyaa/cathulhu"
readme = "README.md"
keywords = ["github","cli"]
license = "Apache-2.0"

[dependencies]
hubcaps = "0.2"
hyper = "0.9"
clap = "2"
